base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sso
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sso
    spec:
      containers:
      - image: scgskku/scg-sso
        imagePullPolicy: Always
        name: scg-sso
        ports:
        - containerPort: 8080
