base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scg-sso
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: sso
